ffigen/LabSoundHelper.h

int BiquadFilterNode_gain(int nodeId);
int BiquadFilterNode_detune(int nodeId);
//////////////////
/// PannerNode ///
//////////////////

int createPannerNode(AudioContext* context);
int PannerNode_panningModel(int nodeId);
void PannerNode_setPanningModel(int nodeId, int m);
int PannerNode_distanceModel(int nodeId);
void PannerNode_setDistanceModel(int nodeId, int m);
void PannerNode_setPosition(int nodeId, float x, float y, float z);
int PannerNode_positionX(int nodeId);
int PannerNode_positionY(int nodeId);
int PannerNode_positionZ(int nodeId);
// The orientation property indicates the X component of the direction in
// which the audio source is facing, in cartesian space. The complete
// vector is defined by the position of the audio source, and the direction
// in which it is facing.
void PannerNode_setOrientation(int nodeId, float x, float y, float z);
int PannerNode_orientationX(int nodeId);
int PannerNode_orientationY(int nodeId);
int PannerNode_orientationZ(int nodeId);
void PannerNode_setVelocity(int nodeId, float x, float y, float z);
int PannerNode_velocityX(int nodeId);
int PannerNode_velocityY(int nodeId);
int PannerNode_velocityZ(int nodeId);
int PannerNode_distanceGain(int nodeId);
int PannerNode_coneGain(int nodeId);
float PannerNode_refDistance(int nodeId);
void PannerNode_setRefDistance(int nodeId, float refDistance);
float PannerNode_maxDistance(int nodeId);
void PannerNode_setMaxDistance(int nodeId, float maxDistance);
float PannerNode_rolloffFactor(int nodeId);
void PannerNode_setRolloffFactor(int nodeId, float rolloffFactor);
float PannerNode_coneInnerAngle(int nodeId);