lib/src/generated_bindings.dart


  late final _BiquadFilterNode_gain_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_gain>>(
          'BiquadFilterNode_gain');
  late final _dart_BiquadFilterNode_gain _BiquadFilterNode_gain =
      _BiquadFilterNode_gain_ptr.asFunction<_dart_BiquadFilterNode_gain>();

  int BiquadFilterNode_detune(
    int nodeId,
  ) {
    return _BiquadFilterNode_detune(
      nodeId,
    );
  }

  late final _BiquadFilterNode_detune_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_detune>>(
          'BiquadFilterNode_detune');
  late final _dart_BiquadFilterNode_detune _BiquadFilterNode_detune =
      _BiquadFilterNode_detune_ptr.asFunction<_dart_BiquadFilterNode_detune>();

  /// ///////////////
  /// PannerNode ///
  /// ///////////////
  int createPannerNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createPannerNode(
      context,
    );
  }

  late final _createPannerNode_ptr =
      _lookup<ffi.NativeFunction<_c_createPannerNode>>('createPannerNode');
  late final _dart_createPannerNode _createPannerNode =
      _createPannerNode_ptr.asFunction<_dart_createPannerNode>();

  int PannerNode_panningModel(
    int nodeId,
  ) {
    return _PannerNode_panningModel(
      nodeId,
    );
  }

  late final _PannerNode_panningModel_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_panningModel>>(
          'PannerNode_panningModel');
  late final _dart_PannerNode_panningModel _PannerNode_panningModel =
      _PannerNode_panningModel_ptr.asFunction<_dart_PannerNode_panningModel>();

  void PannerNode_setPanningModel(
    int nodeId,
    int m,
  ) {
    return _PannerNode_setPanningModel(
      nodeId,
      m,
    );
  }

  late final _PannerNode_setPanningModel_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setPanningModel>>(
          'PannerNode_setPanningModel');
  late final _dart_PannerNode_setPanningModel _PannerNode_setPanningModel =
      _PannerNode_setPanningModel_ptr.asFunction<
          _dart_PannerNode_setPanningModel>();

  int PannerNode_distanceModel(
    int nodeId,
  ) {
    return _PannerNode_distanceModel(
      nodeId,
    );
  }

  late final _PannerNode_distanceModel_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_distanceModel>>(
          'PannerNode_distanceModel');
  late final _dart_PannerNode_distanceModel _PannerNode_distanceModel =
      _PannerNode_distanceModel_ptr.asFunction<
          _dart_PannerNode_distanceModel>();

  void PannerNode_setDistanceModel(
    int nodeId,
    int m,
  ) {
    return _PannerNode_setDistanceModel(
      nodeId,
      m,
    );
  }

  late final _PannerNode_setDistanceModel_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setDistanceModel>>(
          'PannerNode_setDistanceModel');
  late final _dart_PannerNode_setDistanceModel _PannerNode_setDistanceModel =
      _PannerNode_setDistanceModel_ptr.asFunction<
          _dart_PannerNode_setDistanceModel>();

  void PannerNode_setPosition(
    int nodeId,
    double x,
    double y,
    double z,
  ) {
    return _PannerNode_setPosition(
      nodeId,
      x,
      y,
      z,
    );
  }

  late final _PannerNode_setPosition_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setPosition>>(
          'PannerNode_setPosition');
  late final _dart_PannerNode_setPosition _PannerNode_setPosition =
      _PannerNode_setPosition_ptr.asFunction<_dart_PannerNode_setPosition>();

  int PannerNode_positionX(
    int nodeId,
  ) {
    return _PannerNode_positionX(
      nodeId,
    );
  }

  late final _PannerNode_positionX_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_positionX>>(
          'PannerNode_positionX');
  late final _dart_PannerNode_positionX _PannerNode_positionX =
      _PannerNode_positionX_ptr.asFunction<_dart_PannerNode_positionX>();

  int PannerNode_positionY(
    int nodeId,
  ) {
    return _PannerNode_positionY(
      nodeId,
    );
  }

  late final _PannerNode_positionY_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_positionY>>(
          'PannerNode_positionY');
  late final _dart_PannerNode_positionY _PannerNode_positionY =
      _PannerNode_positionY_ptr.asFunction<_dart_PannerNode_positionY>();

  int PannerNode_positionZ(
    int nodeId,
  ) {
    return _PannerNode_positionZ(
      nodeId,
    );
  }

  late final _PannerNode_positionZ_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_positionZ>>(
          'PannerNode_positionZ');
  late final _dart_PannerNode_positionZ _PannerNode_positionZ =
      _PannerNode_positionZ_ptr.asFunction<_dart_PannerNode_positionZ>();

  void PannerNode_setOrientation(
    int nodeId,
    double x,
    double y,
    double z,
  ) {
    return _PannerNode_setOrientation(
      nodeId,
      x,
      y,
      z,
    );
  }

  late final _PannerNode_setOrientation_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setOrientation>>(
          'PannerNode_setOrientation');
  late final _dart_PannerNode_setOrientation _PannerNode_setOrientation =
      _PannerNode_setOrientation_ptr.asFunction<
          _dart_PannerNode_setOrientation>();

  int PannerNode_orientationX(
    int nodeId,
  ) {
    return _PannerNode_orientationX(
      nodeId,
    );
  }

  late final _PannerNode_orientationX_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_orientationX>>(
          'PannerNode_orientationX');
  late final _dart_PannerNode_orientationX _PannerNode_orientationX =
      _PannerNode_orientationX_ptr.asFunction<_dart_PannerNode_orientationX>();

  int PannerNode_orientationY(
    int nodeId,
  ) {
    return _PannerNode_orientationY(
      nodeId,
    );
  }

  late final _PannerNode_orientationY_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_orientationY>>(
          'PannerNode_orientationY');
  late final _dart_PannerNode_orientationY _PannerNode_orientationY =
      _PannerNode_orientationY_ptr.asFunction<_dart_PannerNode_orientationY>();

  int PannerNode_orientationZ(
    int nodeId,
  ) {
    return _PannerNode_orientationZ(
      nodeId,
    );
  }

  late final _PannerNode_orientationZ_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_orientationZ>>(
          'PannerNode_orientationZ');
  late final _dart_PannerNode_orientationZ _PannerNode_orientationZ =
      _PannerNode_orientationZ_ptr.asFunction<_dart_PannerNode_orientationZ>();

  void PannerNode_setVelocity(
    int nodeId,
    double x,
    double y,
    double z,
  ) {
    return _PannerNode_setVelocity(
      nodeId,
      x,
      y,
      z,
    );
  }

  late final _PannerNode_setVelocity_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setVelocity>>(
          'PannerNode_setVelocity');
  late final _dart_PannerNode_setVelocity _PannerNode_setVelocity =
      _PannerNode_setVelocity_ptr.asFunction<_dart_PannerNode_setVelocity>();

  int PannerNode_velocityX(
    int nodeId,
  ) {
    return _PannerNode_velocityX(
      nodeId,
    );
  }

  late final _PannerNode_velocityX_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_velocityX>>(
          'PannerNode_velocityX');
  late final _dart_PannerNode_velocityX _PannerNode_velocityX =
      _PannerNode_velocityX_ptr.asFunction<_dart_PannerNode_velocityX>();

  int PannerNode_velocityY(
    int nodeId,
  ) {
    return _PannerNode_velocityY(
      nodeId,
    );
  }

  late final _PannerNode_velocityY_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_velocityY>>(
          'PannerNode_velocityY');
  late final _dart_PannerNode_velocityY _PannerNode_velocityY =
      _PannerNode_velocityY_ptr.asFunction<_dart_PannerNode_velocityY>();

  int PannerNode_velocityZ(
    int nodeId,
  ) {
    return _PannerNode_velocityZ(
      nodeId,
    );
  }

  late final _PannerNode_velocityZ_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_velocityZ>>(
          'PannerNode_velocityZ');
  late final _dart_PannerNode_velocityZ _PannerNode_velocityZ =
      _PannerNode_velocityZ_ptr.asFunction<_dart_PannerNode_velocityZ>();

  int PannerNode_distanceGain(
    int nodeId,
  ) {
    return _PannerNode_distanceGain(
      nodeId,
    );
  }

  late final _PannerNode_distanceGain_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_distanceGain>>(
          'PannerNode_distanceGain');
  late final _dart_PannerNode_distanceGain _PannerNode_distanceGain =
      _PannerNode_distanceGain_ptr.asFunction<_dart_PannerNode_distanceGain>();

  int PannerNode_coneGain(
    int nodeId,
  ) {
    return _PannerNode_coneGain(
      nodeId,
    );
  }

  late final _PannerNode_coneGain_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_coneGain>>(
          'PannerNode_coneGain');
  late final _dart_PannerNode_coneGain _PannerNode_coneGain =
      _PannerNode_coneGain_ptr.asFunction<_dart_PannerNode_coneGain>();

  double PannerNode_refDistance(
    int nodeId,
  ) {
    return _PannerNode_refDistance(
      nodeId,
    );
  }

  late final _PannerNode_refDistance_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_refDistance>>(
          'PannerNode_refDistance');
  late final _dart_PannerNode_refDistance _PannerNode_refDistance =
      _PannerNode_refDistance_ptr.asFunction<_dart_PannerNode_refDistance>();

  void PannerNode_setRefDistance(
    int nodeId,
    double refDistance,
  ) {
    return _PannerNode_setRefDistance(
      nodeId,
      refDistance,
    );
  }

  late final _PannerNode_setRefDistance_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setRefDistance>>(
          'PannerNode_setRefDistance');
  late final _dart_PannerNode_setRefDistance _PannerNode_setRefDistance =
      _PannerNode_setRefDistance_ptr.asFunction<
          _dart_PannerNode_setRefDistance>();

  double PannerNode_maxDistance(
    int nodeId,
  ) {
    return _PannerNode_maxDistance(
      nodeId,
    );
  }

  late final _PannerNode_maxDistance_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_maxDistance>>(
          'PannerNode_maxDistance');
  late final _dart_PannerNode_maxDistance _PannerNode_maxDistance =
      _PannerNode_maxDistance_ptr.asFunction<_dart_PannerNode_maxDistance>();

  void PannerNode_setMaxDistance(
    int nodeId,
    double maxDistance,
  ) {
    return _PannerNode_setMaxDistance(
      nodeId,
      maxDistance,
    );
  }

  late final _PannerNode_setMaxDistance_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setMaxDistance>>(
          'PannerNode_setMaxDistance');
  late final _dart_PannerNode_setMaxDistance _PannerNode_setMaxDistance =
      _PannerNode_setMaxDistance_ptr.asFunction<
          _dart_PannerNode_setMaxDistance>();

  double PannerNode_rolloffFactor(
    int nodeId,
  ) {
    return _PannerNode_rolloffFactor(
      nodeId,
    );
  }

  late final _PannerNode_rolloffFactor_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_rolloffFactor>>(
          'PannerNode_rolloffFactor');
  late final _dart_PannerNode_rolloffFactor _PannerNode_rolloffFactor =
      _PannerNode_rolloffFactor_ptr.asFunction<
          _dart_PannerNode_rolloffFactor>();

  void PannerNode_setRolloffFactor(
    int nodeId,
    double rolloffFactor,
  ) {
    return _PannerNode_setRolloffFactor(
      nodeId,
      rolloffFactor,
    );
  }

  late final _PannerNode_setRolloffFactor_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setRolloffFactor>>(
          'PannerNode_setRolloffFactor');
  late final _dart_PannerNode_setRolloffFactor _PannerNode_setRolloffFactor =
      _PannerNode_setRolloffFactor_ptr.asFunction<
          _dart_PannerNode_setRolloffFactor>();

  double PannerNode_coneInnerAngle(
    int nodeId,
  ) {
    return _PannerNode_coneInnerAngle(
      nodeId,
    );
  }

  late final _PannerNode_coneInnerAngle_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_coneInnerAngle>>(
          'PannerNode_coneInnerAngle');
  late final _dart_PannerNode_coneInnerAngle _PannerNode_coneInnerAngle =
      _PannerNode_coneInnerAngle_ptr.asFunction<
          _dart_PannerNode_coneInnerAngle>();
